# robot-cn-network

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup_dev_env.sh  test_installation.py
configs/: data_collection.yaml  evaluation.yaml  training.yaml
docs/: visualization_examples.md
notebooks/: data_analysis.ipynb
src/robot_cn_network/: __init__.py
src/robot_cn_network/data/: __init__.py
src/robot_cn_network/models/: __init__.py
src/robot_cn_network/scripts/: analyze.py  collect_data.py  evaluate.py  teleoperation.py  train.py
src/robot_cn_network/utils/: __init__.py  visualize.py
tests/: test_visualization.py
